Quick-Fix: grid rezise cutoff

--- a/src/styles/Grid.module.css
+++ b/src/styles/Grid.module.css
@@ -65,6 +65,7 @@
   justify-content: center;
   min-height: 100%;
   position: relative;
+  margin: auto;
 }
 
 .gridProjectImage {
@@ -120,7 +121,6 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
   transition: transform 0.3s ease;
 }
@@ -179,7 +179,6 @@
 
 @media only screen and (max-width: 530px) {
   .shadedReliefBox {
-    transform: rotate(90deg);
     grid-column-end: span 2;
     grid-row-end: span 1;
     background-size: 100% auto;
@@ -209,16 +208,7 @@
   }
 }
 
-@media only screen and (min-width: 531px) and (max-width: 690px) {
-  .gridChild {
-    grid-column-end: span 1;
-    grid-row-end: span 2;
-  }
 
-  /* .gridTileImage {
-    background-size: auto 100%;
-  } */
-}
 
 @media only screen and (min-width: 846px) and (max-width: 1011px) {
   /* .gridChild {
@@ -231,17 +221,26 @@
     grid-row-end: span 1;
   }
 
+
+
   /* .gridTileImage {
     background-size: 100% auto;
   } */
 }
 
-@media only screen and (min-width: 764px) {
+@media only screen and (max-width: 845px) {
   .gridContent {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 100%;
-    margin: auto;
+    height: auto;
+  }
+}
+
+@media only screen and (min-width: 531px) and (max-width: 690px) {
+  .rotateCell {
+    grid-column-end: span 1;
+    grid-row-end: span 2;
+  }
+
+  .googleMapsApiBox {
+    background-size: auto 100%;
   }
 }
